hw5/istio/30-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: otus-hw5-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - otus-hw5-gateway
  http:
    - match:
      - uri:
          regex: /*
      route:
        - destination:
            subset: v1
            host: otus-hw5-service
            port:
              number: 8080
          weight: 50
        - destination:
            subset: v2
            host: otus-hw5-service
            port:
              number: 8080
          weight: 50
